removed component annotations from webService