@@ -15,22 +15,20 @@ import org.abondar.experimental.wsboard.ws.service.RestService;
 import org.apache.cxf.Bus;
 import org.apache.cxf.bus.spring.SpringBus;
 import org.apache.cxf.endpoint.Server;
-import org.apache.cxf.ext.logging.LoggingOutInterceptor;
 import org.apache.cxf.interceptor.security.SecureAnnotationsInterceptor;
 import org.apache.cxf.jaxrs.JAXRSServerFactoryBean;
 import org.apache.cxf.jaxrs.swagger.Swagger2Feature;
 import org.apache.cxf.rs.security.jose.jwa.SignatureAlgorithm;
 import org.apache.cxf.rs.security.jose.jws.HmacJwsSignatureVerifier;
-import org.springframework.beans.factory.annotation.Value;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.config.PreferencesPlaceholderConfigurer;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.stereotype.Component;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -40,8 +38,6 @@ import java.util.Map;
 @Component
 public class CxfConfig implements WebMvcConfigurer {
 
-    @Value("${cxf.jwt.signature}")
-    private String sig;
 
     @Bean(name = Bus.DEFAULT_BUS_ID)
     public SpringBus springBus() {
@@ -84,6 +80,7 @@ public class CxfConfig implements WebMvcConfigurer {
     }
 
 
+    @Autowired
     @Bean
     public Server jaxRsServer(JacksonJsonProvider jsonProvider, AuthService authService) {
 
@@ -93,12 +90,7 @@ public class CxfConfig implements WebMvcConfigurer {
         factory.setServiceBeanObjects(userService(authService), projectService(),
                 contributorService(), taskService(), sprintService());
 
-        factory.setProvider(jsonProvider);
-        factory.setProvider(authenticationFilter(authService));
-        factory.setInInterceptors(Arrays.asList(new LoggingOutInterceptor(), secureAnnotationsInterceptor()));
-        factory.setOutInterceptors(Collections.singletonList(new LoggingOutInterceptor()));
-
-        factory.setFeatures(Collections.singletonList(createSwaggerFeature()));
+        factory.setFeatures(List.of(createSwaggerFeature()));
         Map<Object, Object> extMappings = new HashMap<>();
         extMappings.put("json", "application/json");
         factory.setExtensionMappings(extMappings);
@@ -125,7 +117,7 @@ public class CxfConfig implements WebMvcConfigurer {
         var swagger2Feature = new Swagger2Feature();
         swagger2Feature.setPrettyPrint(true);
         swagger2Feature.setHost("localhost:8024");
-        swagger2Feature.setBasePath("/cxf/wsboard");
+        swagger2Feature.setBasePath("/api");
         return swagger2Feature;
     }
 
@@ -142,7 +134,7 @@ public class CxfConfig implements WebMvcConfigurer {
 
     @Bean
     public HmacJwsSignatureVerifier signatureVerifier() {
-        return new HmacJwsSignatureVerifier(sig, SignatureAlgorithm.HS256);
+        return new HmacJwsSignatureVerifier("Ym9yc2NodA", SignatureAlgorithm.HS256);
     }
 
 
